--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Typescript, Cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:smoke": "npx cypress run --env grepTags=smoke",
+    "test:regression": "npx cypress run --env grepTags=regression"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/vinayms96/MomStore-Cypress#readme",
   "devDependencies": {
+    "@cypress/grep": "^4.1.0",
     "cypress": "^13.14.0",
     "typescript": "^5.3.3"
   }
